# PCL-Project

./: # PCL-Project.md  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
launch/: detection.launch
pcl_ai_3d_detection/src/: input.pcd  lidar_camera_fusion.cpp  object_detection.py  pcl_preprocessing.cpp  ros_node.cpp  scene_reconstruction.cpp
