<package format="2">
  <name>pcl_3d_detection</name>
  <version>0.1.0</version>
  <description>3D object detection using PCL and YOLOv8</description>

  <maintainer email="urvashiparmar524@gmail.com">urvashiba parmar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>
</package>